# UNET-on-GPU-using-OpenCL

./: README.md  conv2d.cl  conv2d.cpp  extractWeights.py  gitignore  model_summary.md  requirements.txt
CPU Implementation/: readme.md
Code/: readme.md
Mandelbrot_set/: .clang-format  meson.build  run.sh
Mandelbrot_set/.kdev4/: OpenCLExercise2_Mandelbrot.kdev4
Mandelbrot_set/lib/Core/: BoostFilesystem.hpp  Error.cpp  Format.hpp  TimeSpan.cpp  Type.hpp  WindowsError.cpp
Mandelbrot_set/lib/OpenCL/: Device.hpp  Error.hpp  Event.cpp  GetError.hpp  Program.hpp
MatrixMultiplication/: meson.build
MatrixMultiplication/.kdev4/: OpenCLExercise5_MatrixMultiplication.kdev4
MatrixMultiplication/lib/Core/: Image.cpp  OStream.cpp  OStream.hpp  WindowsError.hpp
MatrixMultiplication/lib/OpenCL/: OpenCLKernel.hpp  cl-patched.hpp
MatrixMultiplication/src/: MatrixMultiplication.cl  MatrixMultiplication.cpp
OpenCLExercise1_Basics/: OpenCLExercise1_Basics.kdev4  meson.build
OpenCLExercise1_Basics/.kdev4/: OpenCLExercise1_Basics.kdev4
OpenCLExercise1_Basics/lib/Core/: Exception.cpp  Exception.hpp  Image.cpp  Image.hpp  OStream.hpp  StaticCache.hpp  StrError.c  WindowsError.hpp
OpenCLExercise1_Basics/lib/OpenCL/: Device.cpp  Event.hpp  GetError.cpp  cl-lazy.hpp  meson.build
OpenCLExercise1_Basics/lib/vx/: Vector.hpp
OpenCLExercise1_Basics/src/: OpenCLExercise1_Basics.cl  OpenCLExercise1_Basics.cpp
OpenCLExercise2_Mandelbrot/: OpenCLExercise2_Mandelbrot.kdev4  meson.build
OpenCLExercise2_Mandelbrot/lib/: xxd.py
OpenCLExercise2_Mandelbrot/lib/Core/: OStream.forward.hpp  StringUtil.cpp  Time.hpp
OpenCLExercise2_Mandelbrot/src/: OpenCLExercise2_Mandelbrot.cl  OpenCLExercise2_Mandelbrot.cpp
OpenCLExercise3_Sobel/: OpenCLExercise3_Sobel.kdev4  meson.build  outputcpu_float.pgm  sobelfilter_cpu.cpp
OpenCLExercise3_Sobel/lib/: meson.build
OpenCLExercise3_Sobel/lib/OpenCL/: Program.cpp
OpenCLExercise3_Sobel/lib/vx/: Vector.hpp
OpenCLExercise3_Sobel/src/: OpenCLExercise3_Sobel.cl  OpenCLExercise3_Sobel.cpp
PrefixSum/: meson.build
PrefixSum/lib/Core/: Image.hpp  TimeSpan.hpp  meson.build
PrefixSum/lib/OpenCL/: OpenCLLibLazy.cpp  OpenCLLibLazy.hpp
PrefixSum/src/: PrefixSum.cl  PrefixSum.cpp
Sobel_filter/: main  meson.build  outputcpu.pgm
Sobel_filter/lib/Core/: Error.hpp
conv2D/: conv2D.cpp  conv2D.docx  readme.md  tensor4d.cpp
cpu/: Makefile  conv2D.cpp  getKernels.py  gitignore  kernel_loader.h  readme.md  requirements.txt  tensor4d.cpp
cpu/TensorLib/: eigenTensor.cpp  nn.cpp  nn.h  tensor.cpp  tensor.h
cpu/pytorch/: CMakeLists.txt  pytorch_cpp.cpp
cpu/withVector/: Makefile  conv2d.cpp  conv2d.h  main  main copy.cpp  main.cpp  tensor4D.cpp  tensor4D.h  tensor4d.cpp  timer.cpp  timer.h
cpu_Implementation/: kernel_loader.cpp
exercise1/: OpenCLExercise1_Basics.cpp
gpu/: README.md  compare.py  conv2d.cl  conv2d.cpp  genImage.py  meson.build  pytorch.py  run.sh  tfModel.py
gpu/lib/Core/: CheckedCast.hpp  StringUtil.hpp  Time.cpp
gpu/lib/OpenCL/: Error.cpp
gpu/npy/: cpu_img1.npy  cpu_img2.npy  cpu_img3.npy  cpu_img4.npy  cpu_relu.npy  cpu_upsample.npy  gpu_img1.npy  gpu_img2.npy  gpu_img3.npy  gpu_img4.npy  gpu_maxpool.npy  gpu_upsample.npy  pytorch_maxpool.npy  pytorch_upsample.npy
gpu/sampleImages/: img1.npy  img2.npy  img4.npy
gpu/src/: conv2d.cl  conv2d.cpp
gpu/utils/: a.txt
sampleImages/: img3.npy
